add common properties

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,27 @@
 	path = listing
 	url = https://github.com/xaraya/properties.git
 	branch = com.xaraya.properties.bermuda.listing
+[submodule "iconcheckbox"]
+	path = iconcheckbox
+	url = https://github.com/xaraya/properties.git
+	branch = com.xaraya.properties.jamaica.iconcheckbox
+[submodule "languages"]
+	path = languages
+	url = https://github.com/xaraya/properties.git
+	branch = com.xaraya.properties.jamaica.language
+[submodule "icondropdown"]
+	path = icondropdown
+	url = https://github.com/xaraya/properties.git
+	branch = com.xaraya.properties.jamaica.icondropdown
+[submodule "datetime"]
+	path = datetime
+	url = https://github.com/xaraya/properties.git
+	branch = com.xaraya.properties.jamaica.datetime
+[submodule "codemirror"]
+	path = codemirror
+	url = https://github.com/xaraya/properties.git
+	branch = com.xaraya.properties.jamaica.codemirror
+[submodule "pager"]
+	path = pager
+	url = https://github.com/xaraya/properties.git
+	branch = com.xaraya.properties.jamaica.pager
